--- a/users/src/App.css
+++ b/users/src/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
 }
+
+.card-title { 
+  font-size: 1.5rem;
+  padding: 30px;
+}
+
+.cards-wrapper {
+  background-image: url(assets/lotr.jpg);
+  padding: 20px;
+}
